[metadata]
name = jadio-podcast
version = attr: jadio_podcast._version.__version__
author = hejyll
author_email = hejyll@gmail.com
url = https://github.com/hejyll/jadio-podcast
description = file: README.md
long_description_content_type = text/markdown
keywords = radio
license = CC0 1.0
classifiers =
    License :: OSI Approved :: Creative Commons Zero v1.0 Universal
    Programming Language :: Python :: 3.9

[options]
package_dir =
    = src
packages = find:
zip_safe = False
install_requires =
    jadio-recorder @ git+https://github.com/hejyll/jadio-recorder
    feedgen==1.0.0
    pymongo==4.3.2
    pytz==2023.3.post1
    tqdm==4.36.1

[options.packages.find]
where = src
exclude =
    tests
    tests.*

[options.extras_require]
dev = 
    black==22.10.0
    isort==5.10.1
    pytest==7.2.0

# [options.entry_points]
# console_scripts =
#     jadio-podcast = jadio_podcast.cli:main
